--- a/BackgroundAlert.csproj
+++ b/BackgroundAlert.csproj
@@ -6,14 +6,14 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <Platforms>AnyCPU</Platforms>
     <AlgoType>Indicator</AlgoType>
-    <AssemblyName>Background_Alert_Quantower</AssemblyName>
-    <RootNamespace>Background_Alert_Quantower</RootNamespace>
+    <AssemblyName>BackgroundAlert</AssemblyName>
+    <RootNamespace>BackgroundAlert</RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>C:\Users\Anomaex\Documents\Quantower\TradingPlatform\v1.133.7\..\..\Settings\Scripts\Indicators\Background_Alert_Quantower</OutputPath>
+    <OutputPath>C:\Users\Anomaex\Documents\Quantower\TradingPlatform\v1.133.7\..\..\Settings\Scripts\Indicators\BackgroundAlert</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>C:\Users\Anomaex\Documents\Quantower\TradingPlatform\v1.133.7\..\..\Settings\Scripts\Indicators\Background_Alert_Quantower</OutputPath>
+    <OutputPath>C:\Users\Anomaex\Documents\Quantower\TradingPlatform\v1.133.7\..\..\Settings\Scripts\Indicators\BackgroundAlert</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="TradingPlatform.BusinessLayer">
